add button controller
